k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account
        image: account-service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
