k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        imagePullPolicy: Never
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: jwt-key
          mountPath: /etc/nginx/secrets
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-config
      - name: jwt-key
        secret:
          secretName: jwt-key-secret
