k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: alpine:latest
      imagePullPolicy: Never
      command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never
