k8s/analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  selector:
    app: analytics
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
