k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-db
spec:
  selector:
    app: analytics-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
