k8s/psp-deny-root-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPNonRoot
metadata:
  name: deny-run-as-root
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
