k8s/psp-deny-root-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sPSPNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spspnonroot

        violation[{"msg": msg}] {
          input.review.object.spec.containers[_].securityContext.runAsNonRoot == false
          msg := "Containers must not run as root"
        }
